frontend/tests/cases/positive/graded/reuse-bounds.gr
n : Int [1+1*2+1 : Nat]
n = [1]

quad : Int [4] → Int
quad [x] = x + x + x + x

main : Int
main = quad n
